poll creation feature created

--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -1,3 +1,14 @@
-body{
-    background-color: black;
+.form-container{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
+
+.poll-form{
+    margin-top: 2%;
+    text-align: left;
+}
+
+.possible-answer-group > input{
+    margin-top: 0.5%;
 }
