--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,8 @@
 
 
 {% block styles %}
-<link rel="stylesheet" href="static/styles/home.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/home.css') }}">
+<!-- <link rel="stylesheet" href="static/styles/home.css"> -->
 {% endblock %}
 
 {% block title %}
