--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,8 @@
 
 
 {% block styles %}
-<link rel="stylesheet" href="static/styles/signup.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='styles/signup.css') }}">
+<!-- <link rel="stylesheet" href="static/styles/signup.css"> -->
 {% endblock %}
 
 {% block title %}
