--- a/app/templates/share.html
+++ b/app/templates/share.html
@@ -2,7 +2,7 @@
 
 
 {% block styles %}
-<link rel="stylesheet" href="static/styles/share.css">
+<link rel="stylesheet" href='{{ url_for("static", filename= "styles/share.css") }}'}>
 {% endblock %}
 
 {% block title %}
