poll details redirection added

--- a/app/static/styles/home.css
+++ b/app/static/styles/home.css
@@ -20,3 +20,13 @@
 .allpolls-container-ul{
     padding: 0;
 }
+
+.allpolls-container-list-holder{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.poll-details-para{
+    margin: 0;
+}
