--- a/app/templates/share.html
+++ b/app/templates/share.html
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
         <label for="exampleFormControlSelect1">Select your answer</label>
-        <select class="form-control answer" id="exampleFormControlSelect1">
+        <select class="form-control answer" class="answer">
           <option>{{ poll_details.option_one }}</option>
           <option>{{ poll_details.option_two }}</option>
           <option>{{ poll_details.option_three }}</option>
