success vote pops

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,9 @@
       <button type="button" class="btn btn-outline-dark">Login</button>
     </div>
   </nav>
+  <div class="flashed-message-js">
 
+  </div>
   {% with messages = get_flashed_messages() %}
   {% if messages %}
   <ul>
